feat: openApi студента #INTERNSHIP-106
